<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.xixb.lovenotice.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user"
            android:contentDescription="@string/default_usericon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:text="@string/default_username"
            android:id="@+id/user_name"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:text="@string/default_phone_num"
            android:id="@+id/phone_num"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:text="@string/add_lover"
            android:id="@+id/add_lover"
            android:layout_gravity="center_horizontal"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/abc_text_size_display_3_material"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lover_user_name"
                android:id="@+id/lover_user_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lover_phone_num"
                android:id="@+id/lover_phone_num" />
        </LinearLayout>

        <ScrollView
            android:padding="@dimen/abc_control_padding_material"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            />
    </LinearLayout>
</RelativeLayout>
